tests/fixtures/invalid/bytes_bitxor_int.py
# Cannot bitwise XOR Bytes and Int
x: bytes = b"hello" ^ 1
